--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 // Define project theme colors
 $hz-background : #0078cc;
 $purple: #8a4d76;
